corrected gallery posts lower margin spacing to be in line with the rest of the site.

--- a/style.css
+++ b/style.css
@@ -883,7 +883,7 @@ a.comment-link:hover {
 	background-color:#fff;
 	display: block;
 	hNeight: 300px;
-	margin: 0px 0px 10px 0px;
+	margin: 0px 0px 20px 0px;
 	padding: 20px 10px 10px 10px;
 	overflow: hidden;
 	border-bottom: 1px solid #D2C4A2;
